--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "expect.js": "~0.3.1",
     "express": "~4.14.0",
     "express-brute": "~1.0.1",
-    "mocha": "~3.1.2",
-    "mongo-getdb": "~3.0.0"
+    "mocha": "~10.2.0",
+    "mongodb": "~5.1.0"
   },
   "dependencies": {
     "moment": "~2.13.0",
